# surface-defect-research

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml  debug.yaml  magnetic_tile_binary_full_balanced.yaml  magnetic_tile_binary_full_balanced_gpu.yaml  magnetic_tile_binary_full_balanced_gpu_100.yaml  magnetic_tile_binary_medium_balanced.yaml  magnetic_tile_binary_medium_balanced_gpu.yaml  magnetic_tile_binary_medium_balanced_gpu_100.yaml  magnetic_tile_binary_small.yaml  magnetic_tile_binary_small_balanced.yaml  magnetic_tile_binary_small_balanced_gpu.yaml  magnetic_tile_binary_small_balanced_gpu_100.yaml  magnetic_tile_binary_small_synth_balanced.yaml  magnetic_tile_binary_small_synth_balanced_gpu.yaml  magnetic_tile_binary_small_synth_balanced_gpu_100.yaml  magnetic_tile_binary_small_synth_blend.yaml  magnetic_tile_binary_small_synth_composite_gpu.yaml  magnetic_tile_binary_small_synth_double_balanced.yaml  magnetic_tile_binary_small_synth_double_balanced_gpu.yaml  magnetic_tile_binary_small_synth_double_balanced_gpu_100.yaml  magnetic_tile_binary_small_synth_half_balanced.yaml  magnetic_tile_binary_small_synth_half_balanced_gpu.yaml  magnetic_tile_binary_small_synth_half_balanced_gpu_100.yaml  magnetic_tile_multiclass.yaml  magnetic_tile_multiclass_balanced.yaml  neu_first_run.yaml  neu_resnet.yaml  neu_resnet_full.yaml  neu_resnet_full_gpu.yaml  neu_resnet_full_gpu_100.yaml  neu_resnet_medium.yaml  neu_resnet_medium_gpu.yaml  neu_resnet_medium_gpu_100.yaml  neu_resnet_small.yaml  neu_resnet_small_gpu.yaml  neu_resnet_small_gpu_100.yaml  (+23 more)
ui/: __init__.py  (+3 more)
(+48 files in other folders)
